--- a/css/main.scss
+++ b/css/main.scss
@@ -15,7 +15,7 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$brand-color:      #BD1C2B;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
@@ -49,5 +49,6 @@ $on-laptop:        800px;
         "base",
         "layout",
         "swagger",
-        "syntax-highlighting"
+        "syntax-highlighting",
+        "brand-bits"
 ;
