Bit of brand matching work

--- a/css/main.scss
+++ b/css/main.scss
@@ -14,7 +14,7 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: #fdfdfd;
+$background-color: #fff;
 $brand-color:      #BD1C2B;
 
 $grey-color:       #828282;
@@ -49,6 +49,5 @@ $on-laptop:        800px;
         "base",
         "layout",
         "swagger",
-        "syntax-highlighting",
-        "brand-bits"
+        "syntax-highlighting"
 ;
