Add host and basePath to URL output

--- a/_layouts/swagger.html
+++ b/_layouts/swagger.html
@@ -14,7 +14,7 @@ layout: default
 
 {% for route in swagger.paths %}
 <div class="swagger-paths">
-    <h2 class="swagger-path">{{ route[0] }}</h2>
+  <h2 class="swagger-path">{{ swagger.host }}{{ swagger.basePath }}{{ route[0] }}</h2>
     {% for method in route[1] %}
     <div class="swagger-method swagger-method-{{ method[0] }}">
         <h3 class="swagger-method-title">
