--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
     <nav class="site-nav">
       <div class="trigger">
         {% for page in site.pages %}
-          {% if page.title and page.url != '/index.html' %}
+          {% if page.title and page.url != '/index.html' and page.menu == 'main' %}
           <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
           {% endif %}
         {% endfor %}
