--- a/_layouts/swagger.html
+++ b/_layouts/swagger.html
@@ -23,7 +23,7 @@ layout: default
                 {{ method[1].summary }}
             </a>
         </h3>
-        <div class="swagger-method-details">
+        <div class="swagger-method-details open">
             {% if method[1].parameters %}
             <div class="swagger-parameters">
                 <h4>Parameters</h4>
@@ -74,9 +74,13 @@ layout: default
                     <span class="swagger-response-code">{{ response[0] }}</span>
                     {{ response[1].description }}
                 </h5>
+                {% if swagger.produces.size > 0 %}
+                <ul>
                 {% for content_type in swagger.produces %}
                     {% if response[1].examples[content_type] %}
                         {% assign example = response[1].examples[content_type] %}
+                        <li><a href="#" class="swagger-content-type-link">{{ content_type }}</a>
+                          <div class="swagger-example">
                         {% if content_type contains 'json' %}
                             {% highlight json %}{{ example }}{% endhighlight %}
                         {% elsif content_type contains 'xml' %}
@@ -84,8 +88,12 @@ layout: default
                         {% else %}
                             {% highlight http %}{{ example }}{% endhighlight %}
                         {% endif %}
+                          </div>
+                        </li>
                     {% endif %}
                 {% endfor %}
+                </ul>
+                {% endif %}
                 {% endfor %}
             </div>
             {% endif %}
@@ -141,6 +149,17 @@ function init() {
             }
         });
     });
+
+    $$('.swagger-content-type-link').forEach(function (link) {
+        $.bind(link, {
+            'click': function (e) {
+                var example = $('.swagger-example', link.parentNode)
+                $.toggleDetails(example);
+                e.preventDefault();
+            }
+        });
+    });
+
 }
 
 
